# RawHash2

./: .gitignore  .replit  CMakeLists.txt  Makefile  README.md  build.sh  replit.md
cmake/: CompilerSettings.cmake  Dependencies.cmake  FetchGRPC.cmake  FetchHDF5.cmake  FetchPOD5.cmake  FetchSlow5.cmake
docs/: LIVE.md
docs/live/: example_config.toml  test_live.sh
live/: LIVE.md  example_config.toml  test_live.sh
src/: CMakeLists.txt  Makefile  dtw.c  dtw.h  main.c  rawhash2  revent.c  revent.h  rextdata.c  rextdata.h  rindex.c  rindex.h  rlive.cpp  rlive.h  rmap.c  rmap.h  roptions.c  roptions.h  rsig.c  rsig.h  rsketch.c  rsketch.h
test/: README.md
test/benchmark/: README.md
test/benchmark/scripts/: 1_fast5_to_pod5.sh  2_create_small_pod5.sh  3_run_dorado.sh  4_run_minimap2.sh  5_run_rawhash2_baseline.sh  6.1_run_rawhash2_eval_noindex.sh  6_run_rawhash2_eval.sh  7_refine_moves_remora.sh
test/data/: README.md  download_d10_dmelanogaster_r1041.sh  download_d1_sars-cov-2_r94.sh  download_d2_ecoli_r94.sh  download_d3_yeast.sh  download_d4_green_algae.sh  download_d5_human_na12878.sh  download_d6_ecoli_r10.4.sh  download_d7_saureus_r104.sh  download_d8_human_hg002_r1041.sh  download_d9_ecoli_r1041.sh
test/evaluation/rawsamble/d2_ecoli_r94/: run_rawhash2.sh
test/evaluation/rawsamble/d3_yeast_r94/: run_rawhash2.sh
test/evaluation/rawsamble/d4_green_algae_r94/: run_rawhash2.sh
test/evaluation/rawsamble/d5_human_na12878_r94/: run_rawhash2.sh
test/evaluation/rawsamble/d9_ecoli_r1041/: run_rawhash2.sh
test/evaluation/read_mapping/d10_dmelanogaster_r1041/: profile_rawhash2.sh  run_minimap2.sh  run_rawhash2.sh
test/evaluation/read_mapping/d10_dmelanogaster_r1041/comparison/: 1_generate_results.sh  2_output_results.sh
test/evaluation/read_mapping/d1_sars-cov-2_r94/: run_rawhash2.sh
test/evaluation/read_mapping/d2_ecoli_r94/: run_rawhash2.sh
test/evaluation/read_mapping/d3_yeast_r94/: run_rawhash2.sh
test/evaluation/read_mapping/d4_green_algae_r94/: run_rawhash2.sh
test/evaluation/read_mapping/d5_human_na12878_r94/: run_rawhash2.sh
test/evaluation/read_mapping/d6_ecoli_r104/: profile_rawhash2.sh
test/evaluation/read_mapping/d6_ecoli_r104/comparison/: 1_generate_results.sh
test/evaluation/read_mapping/d7_saureus_r104/: profile_rawhash2.sh  run_rawhash2.sh
test/evaluation/read_mapping/d7_saureus_r104/comparison/: 1_generate_results.sh
test/evaluation/read_mapping/d8_human_hg002_r1041/: profile_rawhash2.sh  run_minimap2.sh  run_rawhash2.sh
test/evaluation/read_mapping/d8_human_hg002_r1041/comparison/: 1_generate_results.sh  2_output_results.sh
test/evaluation/read_mapping/d9_ecoli_r1041/: README.md  profile_rawhash2.sh  run_minimap2.sh  run_rawhash2.sh
test/evaluation/read_mapping/d9_ecoli_r1041/comparison/: 1_generate_results.sh  2_output_results.sh
test/scripts/: analyze_paf.py  evaluate_segmentation.py  extract_moves_from_bam.sh  pafstats.py  refine_moves_remora.py  test_paf_relative.py
